--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#F44336</color>
-    <color name="primary_dark">#D32F2F</color>
+    <color name="primary">#AAAAAA</color>
+    <color name="primary_dark">#AAAAAA</color>
     <!--<color name="primary_light">#FFCDD2</color>-->
     <color name="accent">#FF5722</color>
     <!--<color name="primary_text">#212121</color>-->
